# aai-app

./: .gitignore  AAI_LOCAL_TERMINAL.md  README.md  install.sh  pyproject.toml
aai_app/: bootstrap.py  cli.py  config.py  constants.py  doctor.py  integrations.py  memory.py  openrouter.py  parser.py  rendering.py  shell.py  uninstall.py
aai_app/adapters/: __init__.py  api_adapter.py  base.py  gemini_adapter.py  llamacpp_adapter.py  mlx_adapter.py  ollama_adapter.py  resilient_api_adapter.py
aai_app/core/: chat.py  media.py  pipeline.py  transcribe.py  youtube_api.py
